lib/iroha/builder/exp_parser.rb
# Autogenerated from a Treetop grammar. Edits may be lost.


module Iroha

module Exp
  include Treetop::Runtime

  def root
    @root ||= :design
  end

  module Design0
    def design_contents
      elements[0]
    end
  end

  module Design1
    def get
      design   = Iroha::IDesign.new
      channels = Array.new
      design_contents.elements.each{ |element|
        info = element.get(design)
        if info.class == Iroha::IParams then
          design._add_param(info)
          next
        end
        if info.class == Iroha::IModule then
	    design._add_module(info)
          next
        end
        if info.class == Iroha::IChannel then
          design._add_channel(info)
	    next
        end
      }
	return design
    end
  end

  def _nt_design
    start_index = index
    if node_cache[:design].has_key?(index)
      cached = node_cache[:design][index]
      if cached
        node_cache[:design][index] = cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    s1, i1 = [], index
    loop do
      i2 = index
      r3 = _nt_params
      if r3
        r3 = SyntaxNode.new(input, (index-1)...index) if r3 == true
        r2 = r3
      else
        r4 = _nt_module
        if r4
          r4 = SyntaxNode.new(input, (index-1)...index) if r4 == true
          r2 = r4
        else
          r5 = _nt_channel
          if r5
            r5 = SyntaxNode.new(input, (index-1)...index) if r5 == true
            r2 = r5
          else
            @index = i2
            r2 = nil
          end
        end
      end
      if r2
        s1 << r2
      else
        break
      end
    end
    r1 = instantiate_node(SyntaxNode,input, i1...index, s1)
    s0 << r1
    if s0.last
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
      r0.extend(Design0)
      r0.extend(Design1)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:design][start_index] = r0

    r0
  end

  module Params0
    def params
      elements[4]
    end

  end

  module Params1
    def get(design)
      i_params = Iroha::IParams.new
      params.elements.each { |param|
        i_params.update(param.get(design))
      }
      i_params
    end
  end

  def _nt_params
    start_index = index
    if node_cache[:params].has_key?(index)
      cached = node_cache[:params][index]
      if cached
        node_cache[:params][index] = cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    r2 = _nt_space
    if r2
      r1 = r2
    else
      r1 = instantiate_node(SyntaxNode,input, index...index)
    end
    s0 << r1
    if r1
      if (match_len = has_terminal?('(', false, index))
        r3 = true
        @index += match_len
      else
        terminal_parse_failure('\'(\'')
        r3 = nil
      end
      s0 << r3
      if r3
        r5 = _nt_space
        if r5
          r4 = r5
        else
          r4 = instantiate_node(SyntaxNode,input, index...index)
        end
        s0 << r4
        if r4
          if (match_len = has_terminal?('PARAMS', false, index))
            r6 = instantiate_node(SyntaxNode,input, index...(index + match_len))
            @index += match_len
          else
            terminal_parse_failure('\'PARAMS\'')
            r6 = nil
          end
          s0 << r6
          if r6
            s7, i7 = [], index
            loop do
              r8 = _nt_param
              if r8
                s7 << r8
              else
                break
              end
            end
            r7 = instantiate_node(SyntaxNode,input, i7...index, s7)
            s0 << r7
            if r7
              r10 = _nt_space
              if r10
                r9 = r10
              else
                r9 = instantiate_node(SyntaxNode,input, index...index)
              end
              s0 << r9
              if r9
                if (match_len = has_terminal?(')', false, index))
                  r11 = true
                  @index += match_len
                else
                  terminal_parse_failure('\')\'')
                  r11 = nil
                end
                s0 << r11
                if r11
                  r13 = _nt_space
                  if r13
                    r12 = r13
                  else
                    r12 = instantiate_node(SyntaxNode,input, index...index)
                  end
                  s0 << r12
                end
              end
            end
          end
        end
      end
    end
    if s0.last
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
      r0.extend(Params0)
      r0.extend(Params1)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:params][start_index] = r0

    r0
  end

  module Param0
    def param_key
      elements[3]
    end

    def space
      elements[4]
    end

    def param_value
      elements[5]
    end

  end

  module Param1
    def get(design)
      {param_key.get(design) => param_value.get(design)}
    end
  end

  def _nt_param
    start_index = index
    if node_cache[:param].has_key?(index)
      cached = node_cache[:param][index]
      if cached
        node_cache[:param][index] = cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    r2 = _nt_space
    if r2
      r1 = r2
    else
      r1 = instantiate_node(SyntaxNode,input, index...index)
    end
    s0 << r1
    if r1
      if (match_len = has_terminal?('(', false, index))
        r3 = true
        @index += match_len
      else
        terminal_parse_failure('\'(\'')
        r3 = nil
      end
      s0 << r3
      if r3
        r5 = _nt_space
        if r5
          r4 = r5
        else
          r4 = instantiate_node(SyntaxNode,input, index...index)
        end
        s0 << r4
        if r4
          r6 = _nt_param_key
          s0 << r6
          if r6
            r7 = _nt_space
            s0 << r7
            if r7
              r8 = _nt_param_value
              s0 << r8
              if r8
                r10 = _nt_space
                if r10
                  r9 = r10
                else
                  r9 = instantiate_node(SyntaxNode,input, index...index)
                end
                s0 << r9
                if r9
                  if (match_len = has_terminal?(')', false, index))
                    r11 = true
                    @index += match_len
                  else
                    terminal_parse_failure('\')\'')
                    r11 = nil
                  end
                  s0 << r11
                  if r11
                    r13 = _nt_space
                    if r13
                      r12 = r13
                    else
                      r12 = instantiate_node(SyntaxNode,input, index...index)
                    end
                    s0 << r12
                  end
                end
              end
            end
          end
        end
      end
    end
    if s0.last
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
      r0.extend(Param0)
      r0.extend(Param1)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:param][start_index] = r0

    r0
  end

  module ParamKey0
    def key
      elements[0]
    end
  end

  module ParamKey1
    def get(design) key.text_value;     end
  end

  def _nt_param_key
    start_index = index
    if node_cache[:param_key].has_key?(index)
      cached = node_cache[:param_key][index]
      if cached
        node_cache[:param_key][index] = cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    r1 = _nt_label
    s0 << r1
    if s0.last
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
      r0.extend(ParamKey0)
      r0.extend(ParamKey1)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:param_key][start_index] = r0

    r0
  end

  module ParamValue0
    def val
      elements[0]
    end
  end

  module ParamValue1
    def get(design) val.text_value.to_i;end
  end

  module ParamValue2
    def val
      elements[0]
    end
  end

  module ParamValue3
    def get(design) val.text_value     ;end
  end

  def _nt_param_value
    start_index = index
    if node_cache[:param_value].has_key?(index)
      cached = node_cache[:param_value][index]
      if cached
        node_cache[:param_value][index] = cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0 = index
    i1, s1 = index, []
    r2 = _nt_number
    s1 << r2
    if s1.last
      r1 = instantiate_node(SyntaxNode,input, i1...index, s1)
      r1.extend(ParamValue0)
      r1.extend(ParamValue1)
    else
      @index = i1
      r1 = nil
    end
    if r1
      r1 = SyntaxNode.new(input, (index-1)...index) if r1 == true
      r0 = r1
    else
      i3, s3 = index, []
      r4 = _nt_graph
      s3 << r4
      if s3.last
        r3 = instantiate_node(SyntaxNode,input, i3...index, s3)
        r3.extend(ParamValue2)
        r3.extend(ParamValue3)
      else
        @index = i3
        r3 = nil
      end
      if r3
        r3 = SyntaxNode.new(input, (index-1)...index) if r3 == true
        r0 = r3
      else
        @index = i0
        r0 = nil
      end
    end

    node_cache[:param_value][start_index] = r0

    r0
  end

  module Module0
    def space1
      elements[4]
    end

    def module_id
      elements[5]
    end

    def space2
      elements[6]
    end

    def module_name
      elements[7]
    end

    def contents
      elements[8]
    end

  end

  module Module1
    def get(design)
      parent = nil
      params = Iroha::IParams.new
      tables = Array.new
      contents.elements.each{ |element|
        info = element.get(design)
        if info.class == Iroha::IParams then
          params.update(info)
          next
        end
        if info.class == Iroha::ITable then
          tables.push(info)
          next
        end
        if info.key?(:PARENT) then
          abort "(PARENT #{info[:PARENT]} ... ) is multi definition." if parent.nil? == false
          parent = info[:PARENT]
          next
        end
      }
      Iroha::IModule.new(module_id.get(design), module_name.get(design), parent, params, tables)
    end
  end

  def _nt_module
    start_index = index
    if node_cache[:module].has_key?(index)
      cached = node_cache[:module][index]
      if cached
        node_cache[:module][index] = cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    r2 = _nt_space
    if r2
      r1 = r2
    else
      r1 = instantiate_node(SyntaxNode,input, index...index)
    end
    s0 << r1
    if r1
      if (match_len = has_terminal?('(', false, index))
        r3 = true
        @index += match_len
      else
        terminal_parse_failure('\'(\'')
        r3 = nil
      end
      s0 << r3
      if r3
        r5 = _nt_space
        if r5
          r4 = r5
        else
          r4 = instantiate_node(SyntaxNode,input, index...index)
        end
        s0 << r4
        if r4
          if (match_len = has_terminal?('MODULE', false, index))
            r6 = instantiate_node(SyntaxNode,input, index...(index + match_len))
            @index += match_len
          else
            terminal_parse_failure('\'MODULE\'')
            r6 = nil
          end
          s0 << r6
          if r6
            r7 = _nt_space
            s0 << r7
            if r7
              r8 = _nt_module_id
              s0 << r8
              if r8
                r9 = _nt_space
                s0 << r9
                if r9
                  r10 = _nt_module_name
                  s0 << r10
                  if r10
                    s11, i11 = [], index
                    loop do
                      i12 = index
                      r13 = _nt_parent_module
                      if r13
                        r13 = SyntaxNode.new(input, (index-1)...index) if r13 == true
                        r12 = r13
                      else
                        r14 = _nt_params
                        if r14
                          r14 = SyntaxNode.new(input, (index-1)...index) if r14 == true
                          r12 = r14
                        else
                          r15 = _nt_table
                          if r15
                            r15 = SyntaxNode.new(input, (index-1)...index) if r15 == true
                            r12 = r15
                          else
                            @index = i12
                            r12 = nil
                          end
                        end
                      end
                      if r12
                        s11 << r12
                      else
                        break
                      end
                    end
                    r11 = instantiate_node(SyntaxNode,input, i11...index, s11)
                    s0 << r11
                    if r11
                      r17 = _nt_space
                      if r17
                        r16 = r17
                      else
                        r16 = instantiate_node(SyntaxNode,input, index...index)
                      end
                      s0 << r16
                      if r16
                        if (match_len = has_terminal?(')', false, index))
                          r18 = true
                          @index += match_len
                        else
                          terminal_parse_failure('\')\'')
                          r18 = nil
                        end
                        s0 << r18
                        if r18
                          r20 = _nt_space
                          if r20
                            r19 = r20
                          else
                            r19 = instantiate_node(SyntaxNode,input, index...index)
                          end
                          s0 << r19
                        end
                      end
                    end
                  end
                end
              end
            end
          end
        end
      end
    end
    if s0.last
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
      r0.extend(Module0)
      r0.extend(Module1)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:module][start_index] = r0

    r0
  end

  module ModuleId0
    def id
      elements[0]
    end
  end

  module ModuleId1
    def get(design) id.text_value.to_i;end
  end

  def _nt_module_id
    start_index = index
    if node_cache[:module_id].has_key?(index)
      cached = node_cache[:module_id][index]
      if cached
        node_cache[:module_id][index] = cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    r1 = _nt_number
    s0 << r1
    if s0.last
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
      r0.extend(ModuleId0)
      r0.extend(ModuleId1)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:module_id][start_index] = r0

    r0
  end

  module ModuleName0
    def name
      elements[0]
    end
  end

  module ModuleName1
    def get(design) name.text_value   ;end
  end

  def _nt_module_name
    start_index = index
    if node_cache[:module_name].has_key?(index)
      cached = node_cache[:module_name][index]
      if cached
        node_cache[:module_name][index] = cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    r1 = _nt_label
    s0 << r1
    if s0.last
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
      r0.extend(ModuleName0)
      r0.extend(ModuleName1)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:module_name][start_index] = r0

    r0
  end

  module ParentModule0
    def space
      elements[4]
    end

    def module_id
      elements[5]
    end

  end

  module ParentModule1
    def get(design)
      {:PARENT => module_id.get(design)}
    end
  end

  def _nt_parent_module
    start_index = index
    if node_cache[:parent_module].has_key?(index)
      cached = node_cache[:parent_module][index]
      if cached
        node_cache[:parent_module][index] = cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    r2 = _nt_space
    if r2
      r1 = r2
    else
      r1 = instantiate_node(SyntaxNode,input, index...index)
    end
    s0 << r1
    if r1
      if (match_len = has_terminal?('(', false, index))
        r3 = true
        @index += match_len
      else
        terminal_parse_failure('\'(\'')
        r3 = nil
      end
      s0 << r3
      if r3
        r5 = _nt_space
        if r5
          r4 = r5
        else
          r4 = instantiate_node(SyntaxNode,input, index...index)
        end
        s0 << r4
        if r4
          if (match_len = has_terminal?('PARENT', false, index))
            r6 = instantiate_node(SyntaxNode,input, index...(index + match_len))
            @index += match_len
          else
            terminal_parse_failure('\'PARENT\'')
            r6 = nil
          end
          s0 << r6
          if r6
            r7 = _nt_space
            s0 << r7
            if r7
              r8 = _nt_module_id
              s0 << r8
              if r8
                r10 = _nt_space
                if r10
                  r9 = r10
                else
                  r9 = instantiate_node(SyntaxNode,input, index...index)
                end
                s0 << r9
                if r9
                  if (match_len = has_terminal?(')', false, index))
                    r11 = true
                    @index += match_len
                  else
                    terminal_parse_failure('\')\'')
                    r11 = nil
                  end
                  s0 << r11
                  if r11
                    r13 = _nt_space
                    if r13
                      r12 = r13
                    else
                      r12 = instantiate_node(SyntaxNode,input, index...index)
                    end
                    s0 << r12
                  end
                end
              end
            end
          end
        end
      end
    end
    if s0.last
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
      r0.extend(ParentModule0)
      r0.extend(ParentModule1)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:parent_module][start_index] = r0

    r0
  end

  module Table0
    def space
      elements[0]
    end

    def table_name
      elements[1]
    end
  end

  module Table1
    def space
      elements[4]
    end

    def table_id
      elements[5]
    end

    def table_name_entry
      elements[6]
    end

    def contents
      elements[7]
    end

  end

  module Table2
    def get(design)
      resources     = Array.new
      registers     = Array.new
      states        = Array.new
      if table_name_entry.empty? == false then
        table_name  = table_name_entry.table_name.get(design)
      else
        table_name  = nil
      end
      init_state_id = nil
      contents.elements.each{ |element|
        info = element.get(design)
        if info.key?(:RESOURCES) then
	    resources.concat(info[:RESOURCES])
          next
        end
        if info.key?(:REGISTERS) then
	    registers.concat(info[:REGISTERS])
          next
        end
        if info.key?(:STATE) then
	    states.push(info[:STATE])
          next
        end
        if info.key?(:INITIAL) then
          abort "(INITIAL #{info[:INITIAL]}) is multi definition." if init_state_id.nil? == false
          init_state_id = info[:INITIAL]
          next
        end
      }
      Iroha::ITable.new(table_id.get(design), table_name, resources, registers, states, init_state_id)
    end
  end

  def _nt_table
    start_index = index
    if node_cache[:table].has_key?(index)
      cached = node_cache[:table][index]
      if cached
        node_cache[:table][index] = cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    r2 = _nt_space
    if r2
      r1 = r2
    else
      r1 = instantiate_node(SyntaxNode,input, index...index)
    end
    s0 << r1
    if r1
      if (match_len = has_terminal?('(', false, index))
        r3 = true
        @index += match_len
      else
        terminal_parse_failure('\'(\'')
        r3 = nil
      end
      s0 << r3
      if r3
        r5 = _nt_space
        if r5
          r4 = r5
        else
          r4 = instantiate_node(SyntaxNode,input, index...index)
        end
        s0 << r4
        if r4
          if (match_len = has_terminal?('TABLE', false, index))
            r6 = instantiate_node(SyntaxNode,input, index...(index + match_len))
            @index += match_len
          else
            terminal_parse_failure('\'TABLE\'')
            r6 = nil
          end
          s0 << r6
          if r6
            r7 = _nt_space
            s0 << r7
            if r7
              r8 = _nt_table_id
              s0 << r8
              if r8
                i10, s10 = index, []
                r11 = _nt_space
                s10 << r11
                if r11
                  r12 = _nt_table_name
                  s10 << r12
                end
                if s10.last
                  r10 = instantiate_node(SyntaxNode,input, i10...index, s10)
                  r10.extend(Table0)
                else
                  @index = i10
                  r10 = nil
                end
                if r10
                  r9 = r10
                else
                  r9 = instantiate_node(SyntaxNode,input, index...index)
                end
                s0 << r9
                if r9
                  s13, i13 = [], index
                  loop do
                    i14 = index
                    r15 = _nt_resources
                    if r15
                      r15 = SyntaxNode.new(input, (index-1)...index) if r15 == true
                      r14 = r15
                    else
                      r16 = _nt_registers
                      if r16
                        r16 = SyntaxNode.new(input, (index-1)...index) if r16 == true
                        r14 = r16
                      else
                        r17 = _nt_initial_state
                        if r17
                          r17 = SyntaxNode.new(input, (index-1)...index) if r17 == true
                          r14 = r17
                        else
                          r18 = _nt_state
                          if r18
                            r18 = SyntaxNode.new(input, (index-1)...index) if r18 == true
                            r14 = r18
                          else
                            @index = i14
                            r14 = nil
                          end
                        end
                      end
                    end
                    if r14
                      s13 << r14
                    else
                      break
                    end
                  end
                  r13 = instantiate_node(SyntaxNode,input, i13...index, s13)
                  s0 << r13
                  if r13
                    r20 = _nt_space
                    if r20
                      r19 = r20
                    else
                      r19 = instantiate_node(SyntaxNode,input, index...index)
                    end
                    s0 << r19
                    if r19
                      if (match_len = has_terminal?(')', false, index))
                        r21 = true
                        @index += match_len
                      else
                        terminal_parse_failure('\')\'')
                        r21 = nil
                      end
                      s0 << r21
                      if r21
                        r23 = _nt_space
                        if r23
                          r22 = r23
                        else
                          r22 = instantiate_node(SyntaxNode,input, index...index)
                        end
                        s0 << r22
                      end
                    end
                  end
                end
              end
            end
          end
        end
      end
    end
    if s0.last
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
      r0.extend(Table1)
      r0.extend(Table2)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:table][start_index] = r0

    r0
  end

  module TableId0
    def id
      elements[0]
    end
  end

  module TableId1
    def get(design) id.text_value.to_i;end
  end

  def _nt_table_id
    start_index = index
    if node_cache[:table_id].has_key?(index)
      cached = node_cache[:table_id][index]
      if cached
        node_cache[:table_id][index] = cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    r1 = _nt_number
    s0 << r1
    if s0.last
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
      r0.extend(TableId0)
      r0.extend(TableId1)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:table_id][start_index] = r0

    r0
  end

  module TableNameEntry0
    def table_name
      elements[1]
    end
  end

  module TableNameEntry1
    def get(design) table_name.get(design); end
  end

  def _nt_table_name_entry
    start_index = index
    if node_cache[:table_name_entry].has_key?(index)
      cached = node_cache[:table_name_entry][index]
      if cached
        node_cache[:table_name_entry][index] = cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    r2 = _nt_space
    if r2
      r1 = r2
    else
      r1 = instantiate_node(SyntaxNode,input, index...index)
    end
    s0 << r1
    if r1
      r3 = _nt_table_name
      s0 << r3
    end
    if s0.last
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
      r0.extend(TableNameEntry0)
      r0.extend(TableNameEntry1)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:table_name_entry][start_index] = r0

    r0
  end

  module TableName0
    def key
      elements[0]
    end
  end

  module TableName1
    def get(design) key.text_value; end
  end

  def _nt_table_name
    start_index = index
    if node_cache[:table_name].has_key?(index)
      cached = node_cache[:table_name][index]
      if cached
        node_cache[:table_name][index] = cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    r1 = _nt_label
    s0 << r1
    if s0.last
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
      r0.extend(TableName0)
      r0.extend(TableName1)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:table_name][start_index] = r0

    r0
  end

  module Resources0
    def resources
      elements[4]
    end

  end

  module Resources1
    def get(design)
      # puts "==> RESOURCES"
      {:RESOURCES => resources.elements.map{|resource| resource.get(design)}}
    end
  end

  def _nt_resources
    start_index = index
    if node_cache[:resources].has_key?(index)
      cached = node_cache[:resources][index]
      if cached
        node_cache[:resources][index] = cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end
